force-app/main/default/objects/cgc_sync__Sync_Mobile_App_PL_Map_Ext__c/cgc_sync__Sync_Mobile_App_PL_Map_Ext__c.object-meta.xml
<CustomObject>
    <description>Mapping Information of Picklists to dropdown boxes on the mobile application</description>
    <label>Mobile App Picklist Mapping Extension</label>
    <nameField>
        <displayFormat>PEXT-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mobile App Picklist Mapping Extensions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>