force-app/main/default/objects/cgc_sync__Sync_Mobile_App_PL_Map_Ext__c/fields/cgc_sync__Code__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Code__c</fullName>
    <description>This is the picklist code.</description>
    <label>Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>