force-app/main/default/objects/cgc_sync__Sync_Mobile_App_PL_Map_Ext__c/fields/cgc_sync__Ignore_On_Mobile_App__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Ignore_On_Mobile_App__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in mobile app. Default value is false.</description>
    <label>Ignore on Mobile App</label>
    <type>Checkbox</type>
</CustomField>