force-app/main/default/objects/cgc_sync__Sync_Mobile_App_PL_Map_Ext__c/fields/cgc_sync__ImageId__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__ImageId__c</fullName>
    <description>Image ID of the icon of this picklist value.</description>
    <label>ImageId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>