force-app/main/default/objects/cgc_sync__Sync_Mobile_App_PL_Map_Ext__c/fields/cgc_sync__ParentPicklist__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__ParentPicklist__c</fullName>
    <description>Refers to the picklist mapping record.</description>
    <label>Mobile Picklist Mapping</label>
    <referenceTo>cgc_sync__Sync_Mobile_App_PL_Map__c</referenceTo>
    <relationshipLabel>Mobile App Picklist Mapping Extensions</relationshipLabel>
    <relationshipName>Sync_Mobile_App_PL_Map_Exts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>