force-app/main/default/objects/cgc_sync__Sync_Mobile_App_PL_Map_Ext__c/fields/cgc_sync__ShortText_Language_3__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__ShortText_Language_3__c</fullName>
    <description>Displays short text for language 3 in this business area.</description>
    <label>ShortText_Language_3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>