force-app/main/default/objects/cgc_sync__Sync_Mobile_App_PL_Map_Ext__c/fields/cgc_sync__Sort__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sort__c</fullName>
    <description>Order of the entries in the picklist.</description>
    <label>Sort</label>
    <length>100</length>
    <type>Text</type>
</CustomField>