force-app/main/default/objects/cgc_sync__Sync_Mobile_App_PL_Map_Ext__c/fields/cgc_sync__Text_Language_1__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Text_Language_1__c</fullName>
    <description>Displays text for language 1 in this business area.</description>
    <label>Text_Language_1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>