force-app/main/default/objects/cgc_sync__Sync_Mobile_App_PL_Map_Ext__c/fields/cgc_sync__ValidationCode__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__ValidationCode__c</fullName>
    <description>Segregation value to filter the picklist.</description>
    <label>ValidationCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>